<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/carlovers_logo_big"
        android:contentDescription="@string/img_contentDesc"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/selector_edit_text"
        android:hint="@string/password"
        android:padding="10dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/selector_edit_text"
        android:text="@string/login" />

    <TextView
        android:id="@+id/registerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Dont_have_an_account" />

</LinearLayout>